tests/miniJava/neg/000526_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { extends java [ 0 ] = 0 ; } }
